style.css
:root {
  --Stone100: hsl(30, 54%, 90%);
  --Stone150: hsl(30, 18%, 87%);
  --Stone600: hsl(30, 10%, 34%);
  --Stone900: hsl(24, 5%, 18%);
  --Brown800: hsl(14, 45%, 36%);
  --Rose800: hsl(332, 51%, 32%);
  --Rose50: hsl(330, 100%, 98%);
  --font-body: "Outfit";
  --font-title: "Young Serif";
}
body {
  background-color: var(--Stone100);
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
  font-size: 0625rem;
}
p,
li,
td {
  color: var(--Stone600);
  font-weight: 400;
  font-family: var(--font-body);
}
li {
  margin-block-end: calc(0.6rem);
}
h1,
h2 {
  font-family: var(--font-title);
  font-weight: 700;
  color: var(--Stone900);
}
h2 {
  color: var(--Brown800);
}
main {
  max-width: calc(37rem);
  margin: auto;
  background-color: white;
  padding: calc(2.5rem);
  border-radius: 2rem;
}
section {
  padding: calc(0.5rem) calc(0rem);
}
.omelette {
  width: 100%;
  height: auto;
  border-radius: 1.5rem;
}
span {
  color: var(--Stone900);
  font-weight: 600;
}
.preparation {
  padding: calc(1rem);
  background-color: var(--Rose50);
  border-radius: 1.5rem;
}
.preparation-title {
  color: var(--Rose800);
  font-weight: 700;
  font-size: 1.1rem;
  font-family: var(--font-title);
}
ul li::marker {
  color: var(--Brown800);
  font-size: 0.8rem;
}
ul li {
  margin-right: calc(1rem);
  padding-left: calc(1rem);
}
ol li::marker {
  color: var(--Brown800);
}
ol li {
  margin-right: calc(1rem);
  padding-left: calc(1rem);
}
.ingredients,
.instruction {
  border-bottom: 0.0625rem solid var(--Stone150);
}
.nut-table {
  width: 100%;
  border-collapse: collapse;
}
.nut-table tr {
  border-bottom: 0.0625rem solid var(--Stone150);
}
.nut-table td {
  padding: calc(0.875rem) calc(0.5rem);
}
.nut-table .label {
  width: 60%;
  padding-left: calc(2rem);
}
.nut-table .value {
  font-weight: 600;
  color: var(--Brown800);
}

